Fix viewport scroll issues on mobile
As advised up by Google's crawler. Caused by very long width elements
like tables, images, blockquotes and preformatted text.

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -39,3 +39,11 @@ code {
     color: #A9A9A9;
     font-size: 1.1em;
 }
+
+/* Scroll large widths */
+pre,
+blockquote,
+table,
+.topic p > img {
+    max-width: calc(100vw - 60px);
+}
