--- a/_sass/tables.scss
+++ b/_sass/tables.scss
@@ -1,8 +1,10 @@
 @import "variables.scss";
 
 table {
-    width: 100%;
     border-spacing: 0;
+    display: block;
+    overflow: auto;
+    width: 100%;
 
     tr {
         background: $table-colour;
